--- a/AboutUs.html
+++ b/AboutUs.html
@@ -21,7 +21,7 @@
 <body>
 
     <header>
-        <div class="title"> 
+        <div class="title">
             <a href="" link>MY PROJECT</a>
         </div>
         <div class="headings">
@@ -64,12 +64,18 @@
     </main>
 
     <footer>
-        <h4> Contactos</h4>
-        <p> 
-            Telefone: <br>
-            Email: <br>
-            Localização: <br>
-        </p>
+        
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h4> Contactos</h4>
+                Telefone: 235 245 698 <br>
+                Email: myproject@gmail.com <br>
+                Localização: Porto 4100-293, Rua das Matas 46 <br>
+                <button><a href="" target="_blank"> Formulário de contacto</a></button>
+            </div>
+        </div>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
