--- a/Form.html
+++ b/Form.html
@@ -59,9 +59,13 @@
             Telefone: <br>
             Email: <br>
             Localização: <br>
+            <a href="" target="_blank"> Formulário de contacto</a>
         </p>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
