--- a/Pictures.html
+++ b/Pictures.html
@@ -47,6 +47,7 @@
             Telefone: <br>
             Email: <br>
             Localização: <br>
+            <a href="" target="_blank">Formulário de contacto</a>
         </p>
     </footer>
     
