--- a/Home.html
+++ b/Home.html
@@ -4,64 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <title>Homepage</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="Home.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Jaro:opsz@6..72&family=Sevillana&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Jaro:opsz@6..72&family=Oswald:wght@200..700&family=Sevillana&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <header>
-        <div class="title"> 
-            <a href="" link>My project</a>
+        <div class="container-fluid">
+            <div class="row justify-content-md-center align-items-center row1">
+                <div class="col-md-auto company">
+                    <b>COMPANY</b>
+                </div>
+            </div>
+            <div class="row justify-content-md-center row2" >
+                <div class="col-4 headers">About Us</div>
+                <div class="col-4 headers">Photos</div>
+                <div class="col-4 headers">Conact Form</div>
+            </div>
         </div>
-        <div class="headings">
-            <a href="" target="_blank">Sobre nós</a>
-            <a href="" target="_blank">Agenda</a>
-            <a href="" target="_blank">Fotos</a>
-        </div>
-
     </header>
 
-    <main class="content">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, accusamus eius cumque ab dignissimos quos
-            repudiandae omnis voluptates, ipsam quis aliquid. Culpa unde asperiores, nobis atque et rem nam repellat?
-        </p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem fugit consequatur id, dolores perferendis
-            magni voluptates accusantium doloremque officiis corrupti vel repellendus cumque, delectus debitis tenetur
-            aliquam omnis voluptas quidem!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, error. Nulla numquam quod delectus maiores,
-            placeat officia, fuga et soluta ea ducimus eaque maxime perferendis, aliquam fugit quo! Ut, doloremque.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem adipisci repellendus molestias
-            recusandae animi mollitia sequi veritatis, aperiam tempore. Officia dolore praesentium fugit temporibus ut
-            eum? Odio harum eum earum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, libero distinctio maiores commodi dolorem
-            magni eligendi maxime expedita assumenda, a perspiciatis aliquam repellat vero molestiae eum ducimus
-            reprehenderit et ea.</p>
-        <img src="placehold.jpg">
+    <main>
+        
     </main>
 
-    <footer>
-        <h4> Contactos</h4>
-        <p>
-            Telefone: <br>
-            Email: <br>
-            Localização: <br>
-            <a href="" target="_blank"> Formulário de contacto</a>
-        </p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 </body>
 
