--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-        
+        <div></div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
