--- a/Homepage.html
+++ b/Homepage.html
@@ -18,14 +18,14 @@
     <header>
         <div class="container-fluid">
             <div class="row justify-content-md-center align-items-center title">
-                <div class="col-md-auto company">
-                    <b>NEVADA RENOVATIONS LDA</b>
+                <div class="col-md-auto">
+                    <a class="btn homepage_button" href="http://127.0.0.1:5501/Homepage.html" role="button"><b>NEVADA RENOVATIONS LDA</b></a>
                 </div>
             </div>
             <div class="row justify-content-md-center headers">
-                <div class="col-4">About Us</div>
-                <div class="col-4">Photos</div>
-                <div class="col-4">Contact Form</div>
+                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/AboutUs.html" role="button">About Us</a></div>
+                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/Pictures.html" role="button">Photos</a></div>
+                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/Form.html#" role="button">Contact Form</a></div>
             </div>
         </div>
     </header>
@@ -66,16 +66,16 @@
                     </div>
                     <h4>Some quotes from our previous clients</h4>
                     <div class="maintext">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing.
-                        <br>Lorem, ipsum.<br><br>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi.
-                        <br>Lorem, ipsum.<br><br>
-                        Lorem ipsum dolor sit amet.
-                        <br>Lorem, ipsum.<br><br>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, reiciendis ullam?
-                        <br>Lorem, ipsum.<br><br>
-                        Lorem ipsum dolor sit amet consectetur.
-                        <br>Lorem, ipsum.<br><br>
+                        "Lorem, ipsum dolor sit amet consectetur adipisicing."
+                        <br>-Lorem, ipsum.<br><br>
+                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi."
+                        <br>-Lorem, ipsum.<br><br>
+                        "Lorem ipsum dolor sit amet."
+                        <br>-Lorem, ipsum.<br><br>
+                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, reiciendis ullam?"
+                        <br>-Lorem, ipsum.<br><br>
+                        "Lorem ipsum dolor sit amet consectetur."
+                        <br>-Lorem, ipsum.<br><br>
                     </div>
                 </div>
                 <div class="col-6 align-self-center">
