--- a/Homepage.html
+++ b/Homepage.html
@@ -19,13 +19,17 @@
         <div class="container-fluid">
             <div class="row justify-content-md-center align-items-center title">
                 <div class="col-md-auto">
-                    <a class="btn homepage_button" href="http://127.0.0.1:5501/Homepage.html" role="button"><b>NEVADA RENOVATIONS LDA</b></a>
+                    <a class="btn homepage_button" href="http://127.0.0.1:5501/Homepage.html" role="button"><b>NEVADA
+                            RENOVATIONS LDA</b></a>
                 </div>
             </div>
             <div class="row justify-content-md-center headers">
-                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/AboutUs.html" role="button">About Us</a></div>
-                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/Pictures.html" role="button">Photos</a></div>
-                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/Form.html#" role="button">Contact Form</a></div>
+                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/AboutUs.html" role="button">About
+                        Us</a></div>
+                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/Pictures.html"
+                        role="button">Photos</a></div>
+                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/Form.html#" role="button">Contact
+                        Form</a></div>
             </div>
         </div>
     </header>
@@ -36,50 +40,43 @@
                 <div class="col-6">
                     <h4>Mission statement</h4>
                     <div class="maintext">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et minus quo
-                        accusamus
-                        similique tenetur, dolorem rerum fuga dicta praesentium autem nemo error ex expedita nisi,
-                        sapiente
-                        illum culpa in, nulla maiores. Obcaecati tempora consequuntur, atque sapiente beatae rerum
-                        facere,
-                        aut sed ratione at culpa!
+                        Our mission is to deliver high-quality, innovative construction solutions across Nevada,
+                        prioritizing safety, sustainability, and customer satisfaction. We are committed to exceeding
+                        client expectations through skilled craftsmanship, efficient project management, and a
+                        dedication to building lasting partnerships within our community.
                     </div>
                     <h4>Why choose us?</h4>
 
                     <div class="maintext">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et minus quo accusamus
-                        similique tenetur, dolorem rerum fuga dicta praesentium autem nemo error ex expedita nisi,
-                        sapiente
-                        illum culpa in, nulla maiores. Obcaecati tempora consequuntur, atque sapiente beatae rerum
-                        facere,
-                        aut sed ratione at culpa!
+                        Choose us for reliable, top-quality construction services in Nevada. Our team combines
+                        expertise, innovation, and a commitment to safety to deliver exceptional results on every
+                        project. With a focus on customer satisfaction and timely completion, we build projects that
+                        last.
                     </div>
                     <h4>Our solutions</h4>
 
                     <div class="maintext">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et minus quo accusamus
-                        similique tenetur, dolorem rerum fuga dicta praesentium autem nemo error ex expedita nisi,
-                        sapiente
-                        illum culpa in, nulla maiores. Obcaecati tempora consequuntur, atque sapiente beatae rerum
-                        facere,
-                        aut sed ratione at culpa!
+                        Our solutions include residential, commercial, and industrial construction, specializing in
+                        design-build, renovation, and project management services. We offer sustainable, cost-effective
+                        approaches tailored to your needs, ensuring high-quality craftsmanship and on-time completion.
+                        Let us turn your vision into reality with precision and care.
                     </div>
                     <h4>Some quotes from our previous clients</h4>
                     <div class="maintext">
-                        "Lorem, ipsum dolor sit amet consectetur adipisicing."
-                        <br>-Lorem, ipsum.<br><br>
-                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi."
-                        <br>-Lorem, ipsum.<br><br>
-                        "Lorem ipsum dolor sit amet."
-                        <br>-Lorem, ipsum.<br><br>
-                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, reiciendis ullam?"
-                        <br>-Lorem, ipsum.<br><br>
-                        "Lorem ipsum dolor sit amet consectetur."
-                        <br>-Lorem, ipsum.<br><br>
+                        "Exceeded expectations with quality work and timely project completion!"
+                        <br>– Sarah L.<br><br>
+                        "Professional, reliable, and delivered exceptional results every step of the way."
+                        <br>– John M.<br><br>
+                        "Outstanding craftsmanship and seamless project management. Highly recommend their services." 
+                        <br>– Emily R.<br><br>
+                        "They went above and beyond to ensure everything was perfect!"
+                        <br>– Mark T.<br><br>
+                        "Fantastic company! Turned our vision into reality with excellent results."
+                        <br>– Lisa W.<br><br>
                     </div>
                 </div>
                 <div class="col-6 align-self-center">
-                        <img class="center-block" src="Logo.png">
+                    <img class="center-block" src="Logo.png">
                 </div>
             </div>
     </main>
