--- a/AboutUs.html
+++ b/AboutUs.html
@@ -19,13 +19,17 @@
         <div class="container-fluid">
             <div class="row justify-content-md-center align-items-center title">
                 <div class="col-md-auto">
-                    <a class="btn homepage_button" href="http://127.0.0.1:5501/Homepage.html" role="button"><b>NEVADA RENOVATIONS LDA</b></a>
+                    <a class="btn homepage_button" href="http://127.0.0.1:5501/Homepage.html" role="button"><b>NEVADA
+                            RENOVATIONS LDA</b></a>
                 </div>
             </div>
             <div class="row justify-content-md-center headers">
-                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/AboutUs.html" role="button">About Us</a></div>
-                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/Pictures.html" role="button">Photos</a></div>
-                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/Form.html#" role="button">Contact Form</a></div>
+                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/AboutUs.html" role="button">About
+                        Us</a></div>
+                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/Pictures.html"
+                        role="button">Photos</a></div>
+                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/Form.html#" role="button">Contact
+                        Form</a></div>
             </div>
         </div>
     </header>
@@ -37,55 +41,48 @@
                 <div class="col-6">
                     <h4>Our history</h4>
                     <div class="ourstory">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus reiciendis odit veniam
-                            placeat non eligendi ipsum, officiis iure maiores quos animi, corrupti recusandae pariatur
-                            suscipit earum, in laborum quasi ducimus magni? Deserunt corporis tenetur velit molestiae
-                            similique soluta perspiciatis! Provident voluptatem illum deleniti tempore maxime
-                            laboriosam,
-                            assumenda fuga repellendus labore delectus debitis architecto, quis quaerat error? Porro
-                            excepturi qui vel ipsam veniam id sit? Omnis cum vel deleniti ducimus delectus?</p>
+                        <p>Founded in 1978, we began as a small, family-owned construction company focused on
+                            residential projects in Nevada. With a passion for quality craftsmanship and a commitment to
+                            customer satisfaction, we quickly built a reputation for excellence. Over the years, our
+                            dedicated team grew, and so did the scope of our services, expanding into commercial and
+                            industrial construction.</p>
 
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque, error maiores? Et,
-                            recusandae
-                            perferendis eum autem amet sequi ut illo nemo dolor, impedit vel accusamus ipsum aspernatur
-                            molestias nobis expedita doloribus ex incidunt odit itaque. Animi dolore totam in id
-                            incidunt
-                            voluptatibus ut, voluptatem sit. Cumque maiores minima veritatis quis porro soluta quaerat,
-                            ipsum illum mollitia, sed perferendis dolores unde earum necessitatibus. Labore, nemo nobis!
+                        <p>In the 1980s, we embraced innovative construction techniques and modern technologies,
+                            allowing us to stay ahead of industry trends. This forward-thinking approach helped us
+                            deliver efficient, high-quality projects. We built lasting relationships with clients,
+                            earning repeat business and expanding our network across the state. Our focus on timely
+                            completion and budget-conscious solutions became a hallmark of our brand.
                         </p>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde delectus pariatur, omnis,
-                            mollitia asperiores natus fugiat beatae amet explicabo enim magnam magni rerum debitis iusto
-                            similique ullam et sint, perferendis neque in rem praesentium optio! Voluptate nisi
-                            voluptatem blanditiis pariatur tempore reprehenderit nostrum ab cupiditate deserunt hic id
-                            asperiores nobis, quaerat alias voluptatum suscipit odit est soluta dolorem? Ut maiores
-                            molestias itaque cum vero aut sapiente? Necessitatibus.</p>
+                        <p>Throughout the 1990s, we continued to evolve, taking on larger, more complex projects. From
+                            office buildings to retail centers, our portfolio grew, and we gained recognition for our
+                            ability to handle projects of varying scales. Our experienced team of professionals ensured
+                            that every detail was meticulously planned and executed, maintaining the high standards we
+                            were known for.</p>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem commodi asperiores ipsa
-                            dolores! Harum, praesentium, laudantium veritatis facere enim ab consequatur numquam fugiat
-                            error doloremque impedit temporibus reprehenderit sint expedita eligendi soluta rem. Nihil
-                            id, mollitia eligendi culpa, ullam ipsa eum voluptate odio tenetur deserunt animi nostrum
-                            necessitatibus facere quos ipsam labore? Omnis enim doloremque saepe perferendis corporis,
-                            reprehenderit commodi earum est beatae debitis, illum nam!</p>
+                        <p>As we entered the 2000s, we placed a greater emphasis on sustainability and eco-friendly
+                            construction practices. Our commitment to reducing environmental impact became a core part
+                            of our mission. We adopted green building practices and focused on energy-efficient
+                            solutions for both residential and commercial properties. This shift reflected the growing
+                            demand for environmentally responsible construction in Nevada.</p>
 
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, porro modi. Suscipit
-                            harum, hic consequatur magni blanditiis quibusdam iste eveniet nostrum explicabo placeat
-                            similique dicta itaque at recusandae temporibus odio numquam animi id, quod ullam error
-                            aspernatur ex? Fugit ducimus assumenda voluptates est placeat quia suscipit error tempora
-                            sint nesciunt esse distinctio rem voluptatem, quam explicabo incidunt a alias sapiente
-                            maxime praesentium commodi? Consequuntur, dignissimos.</p>
+                        <p>In the 2010s, we expanded our services to include design-build and full project management
+                            capabilities. This allowed us to provide clients with a more streamlined construction
+                            process, from initial design to final completion. We worked with architects, engineers, and
+                            subcontractors to create customized solutions that met the unique needs of each project. Our
+                            reputation for exceptional service and quality continued to grow.</p>
 
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo animi placeat a, autem illum
-                            consectetur nobis doloremque corrupti aperiam tempore cumque repudiandae, saepe quaerat
-                            quis! Qui voluptates, exercitationem sapiente ullam minus voluptatem voluptatibus amet
-                            perferendis culpa a atque aperiam quam eligendi accusamus, officiis ipsum, cumque ea
-                            consectetur pariatur dolor facilis aspernatur? Est dolorum aut veritatis nobis neque
-                            pariatur, dolor, quasi accusantium, repellendus quos libero architecto explicabo velit
-                            delectus natus alias modi?</p>
+                        <p>Today, we stand as one of Nevada’s most trusted construction companies. Our team is made up
+                            of highly skilled professionals who share a commitment to excellence. We pride ourselves on
+                            our ability to tackle any project, no matter the size or complexity. Our focus remains on
+                            delivering high-quality results that exceed our clients' expectations.</p>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque incidunt officia et eligendi,
-                            pariatur, id, adipisci excepturi laborum ipsum animi perferendis vero eius! Fugit earum,
-                            doloribus hic deserunt ab nam iste sequi?</p>
+                        <p>From humble beginnings to becoming a state leader, our journey is defined by a passion for
+                            quality, integrity, and innovation. We look forward to continuing our legacy of excellence
+                            in construction for many years to come. As we move forward, we remain dedicated to upholding
+                            the values that have defined us since 1978. With a strong foundation built on trust,
+                            expertise, and innovation, we’re excited to take on new challenges and continue serving
+                            Nevada’s growing construction needs.</p>
                     </div>
 
                 </div>
