--- a/Pictures.html
+++ b/Pictures.html
@@ -48,22 +48,22 @@
                             <div class="carousel-item active">
                                 <img src="Slide1.jpg" class="d-block w-100 imagemcar" alt="...">
                                 <div class="carousel-caption">
-                                    <h5 class="labels">First slide label</h5>
-                                    <p class="labels">Some representative placeholder content for the first slide.</p>
+                                    <h5 class="labels">Construction of the "Desert Hall" shopping in the outskirts of Las Vegas</h5>
+                                    <p class="labels">This was our first project on a massive scale and it required 6 years to complete</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="Slide2.jpg" class="d-block w-100 imagemcar" alt="...">
                                 <div class="carousel-caption">
-                                    <h5 class="labels">Second slide label</h5>
-                                    <p class="labels">Some representative placeholder content for the second slide.</p>
+                                    <h5 class="labels">Construction of an apartment complex in the suburbs of Reno </h5>
+                                    <p class="labels">We are proud to have built many such residential buildings in the birthplace of our company</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="Slide3.webp" class="d-block w-100 imagemcar" alt="...">
                                 <div class="carousel-caption">
-                                    <h5 class="labels">Third slide label</h5>
-                                    <p class="labels">Some representative placeholder content for the third slide.</p>
+                                    <h5 class="labels">Construction of the Carson City International Airport</h5>
+                                    <p class="labels">This was part of a government-subsidised effort to increase the population of Northwestern Nevada</p>
                                 </div>
                             </div>
                         </div>
