--- a/AboutUs.html
+++ b/AboutUs.html
@@ -19,16 +19,16 @@
         <div class="container-fluid">
             <div class="row justify-content-md-center align-items-center title">
                 <div class="col-md-auto">
-                    <a class="btn homepage_button" href="http://127.0.0.1:5501/Homepage.html" role="button"><b>NEVADA
+                    <a class="btn homepage_button" href="https://lfonseca3903.github.io/TrabalhoPratico_01/Homepage.html" role="button"><b>NEVADA
                             RENOVATIONS LDA</b></a>
                 </div>
             </div>
             <div class="row justify-content-md-center headers">
-                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/AboutUs.html" role="button">About
+                <div class="col-4"><a class="btn buttons" href="https://lfonseca3903.github.io/TrabalhoPratico_01/AboutUs.html" role="button">About
                         Us</a></div>
-                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/Pictures.html"
+                <div class="col-4"><a class="btn buttons" href="https://lfonseca3903.github.io/TrabalhoPratico_01/Pictures.html"
                         role="button">Photos</a></div>
-                <div class="col-4"><a class="btn buttons" href="http://127.0.0.1:5501/Form.html#" role="button">Contact
+                <div class="col-4"><a class="btn buttons" href="https://lfonseca3903.github.io/TrabalhoPratico_01/Form.html#" role="button">Contact
                         Form</a></div>
             </div>
         </div>
