--- a/AboutUs.html
+++ b/AboutUs.html
@@ -19,7 +19,7 @@
         <div class="container-fluid">
             <div class="row justify-content-md-center align-items-center title">
                 <div class="col-md-auto">
-                    <a class="btn homepage_button" href="https://lfonseca3903.github.io/TrabalhoPratico_01/index.html" role="button"><b>NEVADA
+                    <a class="btn homepage_button" href="https://lfonseca3903.github.io/TrabalhoPratico_01/" role="button"><b>NEVADA
                             RENOVATIONS LDA</b></a>
                 </div>
             </div>
@@ -28,7 +28,7 @@
                         Us</a></div>
                 <div class="col-4"><a class="btn buttons" href="https://lfonseca3903.github.io/TrabalhoPratico_01/Pictures.html"
                         role="button">Photos</a></div>
-                <div class="col-4"><a class="btn buttons" href="https://lfonseca3903.github.io/TrabalhoPratico_01/Form.html#" role="button">Contact
+                <div class="col-4"><a class="btn buttons" href="https://lfonseca3903.github.io/TrabalhoPratico_01/Form.html" role="button">Contact
                         Form</a></div>
             </div>
         </div>
