--- a/AboutUs.html
+++ b/AboutUs.html
@@ -19,7 +19,7 @@
         <div class="container-fluid">
             <div class="row justify-content-md-center align-items-center title">
                 <div class="col-md-auto">
-                    <a class="btn homepage_button" href="https://lfonseca3903.github.io/TrabalhoPratico_01/" role="button"><b>NEVADA
+                    <a class="btn homepage_button" href="https://lfonseca3903.github.io/TrabalhoPratico_01/Homepage.html" role="button"><b>NEVADA
                             RENOVATIONS LDA</b></a>
                 </div>
             </div>
