--- a/Form.html
+++ b/Form.html
@@ -19,7 +19,7 @@
         <div class="container-fluid">
             <div class="row justify-content-md-center align-items-center title">
                 <div class="col-md-auto">
-                    <a class="btn homepage_button" href="#index" role="button"><b>NEVADA RENOVATIONS LDA</b></a>
+                    <a class="btn homepage_button" href="index.html" role="button"><b>NEVADA RENOVATIONS LDA</b></a>
                 </div>
             </div>
             <div class="row justify-content-md-center headers">
